# Fastapi-meets-Langgraph

./: Makefile  README.md  pyproject.toml
src/app/: __init__.py  dependencies.py  main.py
src/app/agents/: __init__.py
src/app/genai/agents/: __init__.py
src/app/genai/prompts/: __init__.py
src/app/genai/workflows/: example_workflow.py
src/app/prompts/: __init__.py
src/app/routes/: __init__.py
src/app/workflows/: example_workflow.py
